--- a/cn-list.yaml
+++ b/cn-list.yaml
@@ -5,6 +5,10 @@ payload:
 # ali
 
 # bilibili
+  - DOMAIN-SUFFIX,bilibili.com
+  - DOMAIN-SUFFIX,biliapi.net
+  - DOMAIN-SUFFIX,biliapi.com
+  - DOMAIN-SUFFIX,bilivideo.com
 
 # iqiyi
 
