更新 microsoft.yaml

--- a/microsoft.yaml
+++ b/microsoft.yaml
@@ -1,23 +1,38 @@
 payload:
+# 基础微软服务
   - DOMAIN-SUFFIX,microsoft.com
-  - DOMAIN-SUFFIX,windowsupdate.com
-  - DOMAIN-SUFFIX,windows.com
-  - DOMAIN-SUFFIX,winupdate.com
-  - DOMAIN-SUFFIX,ntp.org
-  - DOMAIN-SUFFIX,live.com
-  - DOMAIN-SUFFIX,s-microsoft.com
-  - DOMAIN-SUFFIX,xboxlive.com
   - DOMAIN-SUFFIX,office.com
   - DOMAIN-SUFFIX,office365.com
-  - DOMAIN-SUFFIX,office.net
-  - DOMAIN-SUFFIX,microsoft.com.edgesuite.net
   - DOMAIN-SUFFIX,sharepoint.com
-  - DOMAIN-SUFFIX,onenote.com
-  - DOMAIN-SUFFIX,onedrive.com
+  - DOMAIN-SUFFIX,teams.microsoft.com
+  - DOMAIN-SUFFIX,skype.com
+
+# 身份与认证
+  - DOMAIN-SUFFIX,login.microsoftonline.com
+  - DOMAIN-SUFFIX,aadcdn.microsoftonline-p.com
+  - DOMAIN-SUFFIX,graph.microsoft.com
+  - DOMAIN-SUFFIX,sts.windows.net
+
+# Windows 更新与系统
+  - DOMAIN-SUFFIX,windowsupdate.com
+  - DOMAIN-SUFFIX,update.microsoft.com
+  - DOMAIN-SUFFIX,delivery.mp.microsoft.com
+  - DOMAIN-SUFFIX,wns.windows.com
+
+# Azure 云服务
+  - DOMAIN-SUFFIX,azure.com
+  - DOMAIN-SUFFIX,azureedge.net
+  - DOMAIN-SUFFIX,azurefd.net
+  - DOMAIN-SUFFIX,visualstudio.com
+
+# 存储与 CDN
+  - DOMAIN-SUFFIX,blob.core.windows.net
+  - DOMAIN-SUFFIX,cdn.office.net
   - DOMAIN-SUFFIX,msocdn.com
-  - DOMAIN-SUFFIX,msauth.net
-  - DOMAIN-SUFFIX,msauthimages.net
-  - DOMAIN-SUFFIX,msftauth.net
-  - DOMAIN-SUFFIX,msftauthimages.net
-  - DOMAIN-SUFFIX,microsoftonline.com
-  - DOMAIN-SUFFIX,microsoftonline-p.com
+  - DOMAIN-SUFFIX,akamaiedge.net
+
+# 消费者服务
+  - DOMAIN-SUFFIX,live.com
+  - DOMAIN-SUFFIX,outlook.com
+  - DOMAIN-SUFFIX,xboxlive.com
+  - DOMAIN-SUFFIX,bing.com
