--- a/cn-list.yaml
+++ b/cn-list.yaml
@@ -59,6 +59,8 @@ payload:
   - DOMAIN-SUFFIX,hdslb.com
   - DOMAIN-SUFFIX,biliapi.net
   - DOMAIN-SUFFIX,biligame.com
+  - DOMAIN-SUFFIX,biliapi.com
+  - DOMAIN-SUFFIX,bilivideo.com
 
 # 美团 / 大众点评 (Meituan / Dianping)
   - DOMAIN-SUFFIX,meituan.com
