--- a/microsoft.yaml
+++ b/microsoft.yaml
@@ -14,6 +14,7 @@ payload:
   - DOMAIN-SUFFIX,onedrive.com
   - DOMAIN-SUFFIX,cdn.office.net
   - DOMAIN-SUFFIX,msocdn.com
+  - DOMAIN-SUFFIX,sfx.ms
 
 # 身份与认证 (Azure AD)
   - DOMAIN-SUFFIX,login.microsoftonline.com
