--- a/local.yaml
+++ b/local.yaml
@@ -1,4 +1,8 @@
 payload:
+  # 本地局域网网段
   - IP-CIDR,10.0.0.0/8
   - IP-CIDR,172.0.0.0/12
   - IP-CIDR,192.168.0.0/16
+
+  # 本地组播地址网段
+  - IP-CIDR,224.0.0.0/4
