--- a/local.yaml
+++ b/local.yaml
@@ -1,8 +1,12 @@
 payload:
   # 本地局域网网段
+  - DOMAIN-SUFFIX,local
+  - DOMAIN-SUFFIX,homekit
   - IP-CIDR,10.0.0.0/8
   - IP-CIDR,172.0.0.0/12
   - IP-CIDR,192.168.0.0/16
 
   # 本地组播地址网段
+  - IP-CIDR,224.0.0.251/32
   - IP-CIDR,224.0.0.0/4
+  - IP-CIDR,239.255.255.250/32
