--- a/google.yaml
+++ b/google.yaml
@@ -20,42 +20,42 @@ payload:
   - DOMAIN-SUFFIX,ytimg.com
   
   # Google 核心 IP 段
-  - IP-CIDR,8.8.8.0/24
-  - IP-CIDR,8.8.4.0/24
-  - IP-CIDR,8.34.208.0/20
-  - IP-CIDR,8.35.192.0/20
-  - IP-CIDR,23.236.48.0/20
-  - IP-CIDR,23.251.128.0/20
-  - IP-CIDR,34.64.0.0/10
-  - IP-CIDR,34.96.0.0/11
-  - IP-CIDR,34.128.0.0/10
-  - IP-CIDR,35.184.0.0/13
-  - IP-CIDR,35.192.0.0/14
-  - IP-CIDR,35.196.0.0/15
-  - IP-CIDR,35.198.0.0/16
-  - IP-CIDR,35.199.0.0/16
-  - IP-CIDR,35.200.0.0/13
-  - IP-CIDR,35.208.0.0/12
-  - IP-CIDR,35.224.0.0/12
-  - IP-CIDR,35.240.0.0/13
-  - IP-CIDR,64.15.112.0/20
-  - IP-CIDR,64.233.160.0/19
-  - IP-CIDR,66.102.0.0/20
-  - IP-CIDR,66.249.64.0/19
-  - IP-CIDR,70.32.128.0/19
-  - IP-CIDR,74.114.24.0/21
-  - IP-CIDR,74.125.0.0/16
-  - IP-CIDR,104.154.0.0/15
-  - IP-CIDR,104.196.0.0/14
-  - IP-CIDR,108.177.8.0/21
-  - IP-CIDR,108.177.96.0/19
-  - IP-CIDR,142.250.0.0/15
-  - IP-CIDR,172.217.0.0/16
-  - IP-CIDR,172.253.0.0/16
-  - IP-CIDR,173.194.0.0/16
-  - IP-CIDR,192.178.0.0/15
-  - IP-CIDR,199.36.154.0/23
-  - IP-CIDR,199.36.156.0/24
-  - IP-CIDR,207.223.160.0/20
-  - IP-CIDR,216.58.192.0/19
-  - IP-CIDR,216.239.32.0/19
+  - IP-CIDR,8.8.8.0/24,no-resolve
+  - IP-CIDR,8.8.4.0/24,no-resolve
+  - IP-CIDR,8.34.208.0/20,no-resolve
+  - IP-CIDR,8.35.192.0/20,no-resolve
+  - IP-CIDR,23.236.48.0/20,no-resolve
+  - IP-CIDR,23.251.128.0/20,no-resolve
+  - IP-CIDR,34.64.0.0/10,no-resolve
+  - IP-CIDR,34.96.0.0/11,no-resolve
+  - IP-CIDR,34.128.0.0/10,no-resolve
+  - IP-CIDR,35.184.0.0/13,no-resolve
+  - IP-CIDR,35.192.0.0/14,no-resolve
+  - IP-CIDR,35.196.0.0/15,no-resolve
+  - IP-CIDR,35.198.0.0/16,no-resolve
+  - IP-CIDR,35.199.0.0/16,no-resolve
+  - IP-CIDR,35.200.0.0/13,no-resolve
+  - IP-CIDR,35.208.0.0/12,no-resolve
+  - IP-CIDR,35.224.0.0/12,no-resolve
+  - IP-CIDR,35.240.0.0/13,no-resolve
+  - IP-CIDR,64.15.112.0/20,no-resolve
+  - IP-CIDR,64.233.160.0/19,no-resolve
+  - IP-CIDR,66.102.0.0/20,no-resolve
+  - IP-CIDR,66.249.64.0/19,no-resolve
+  - IP-CIDR,70.32.128.0/19,no-resolve
+  - IP-CIDR,74.114.24.0/21,no-resolve
+  - IP-CIDR,74.125.0.0/16,no-resolve
+  - IP-CIDR,104.154.0.0/15,no-resolve
+  - IP-CIDR,104.196.0.0/14,no-resolve
+  - IP-CIDR,108.177.8.0/21,no-resolve
+  - IP-CIDR,108.177.96.0/19,no-resolve
+  - IP-CIDR,142.250.0.0/15,no-resolve
+  - IP-CIDR,172.217.0.0/16,no-resolve
+  - IP-CIDR,172.253.0.0/16,no-resolve
+  - IP-CIDR,173.194.0.0/16,no-resolve
+  - IP-CIDR,192.178.0.0/15,no-resolve
+  - IP-CIDR,199.36.154.0/23,no-resolve
+  - IP-CIDR,199.36.156.0/24,no-resolve
+  - IP-CIDR,207.223.160.0/20,no-resolve
+  - IP-CIDR,216.58.192.0/19,no-resolve
+  - IP-CIDR,216.239.32.0/19,no-resolve
