--- a/microsoft.yaml
+++ b/microsoft.yaml
@@ -73,27 +73,27 @@ payload:
   - DOMAIN-KEYWORD,microsoft
 
   # Microsoft 核心 IP 段
-  - IP-CIDR,13.64.0.0/11
-  - IP-CIDR,13.96.0.0/13
-  - IP-CIDR,13.104.0.0/14
-  - IP-CIDR,13.108.0.0/15
-  - IP-CIDR,20.36.0.0/14
-  - IP-CIDR,20.40.0.0/13
-  - IP-CIDR,20.84.0.0/14
-  - IP-CIDR,20.190.0.0/16
-  - IP-CIDR,40.64.0.0/10
-  - IP-CIDR,40.80.0.0/12
-  - IP-CIDR,40.112.0.0/13
-  - IP-CIDR,40.120.0.0/14
-  - IP-CIDR,40.124.0.0/16
-  - IP-CIDR,52.96.0.0/12
-  - IP-CIDR,52.112.0.0/14
-  - IP-CIDR,52.120.0.0/14
-  - IP-CIDR,52.128.0.0/17
-  - IP-CIDR,104.40.0.0/13
-  - IP-CIDR,104.208.0.0/13
-  - IP-CIDR,157.56.0.0/14
-  - IP-CIDR,157.56.64.0/18
-  - IP-CIDR,191.232.0.0/14
-  - IP-CIDR,207.46.0.0/16
-  - IP-CIDR,207.68.128.0/17
+  - IP-CIDR,13.64.0.0/11,no-resolve
+  - IP-CIDR,13.96.0.0/13,no-resolve
+  - IP-CIDR,13.104.0.0/14,no-resolve
+  - IP-CIDR,13.108.0.0/15,no-resolve
+  - IP-CIDR,20.36.0.0/14,no-resolve
+  - IP-CIDR,20.40.0.0/13,no-resolve
+  - IP-CIDR,20.84.0.0/14,no-resolve
+  - IP-CIDR,20.190.0.0/16,no-resolve
+  - IP-CIDR,40.64.0.0/10,no-resolve
+  - IP-CIDR,40.80.0.0/12,no-resolve
+  - IP-CIDR,40.112.0.0/13,no-resolve
+  - IP-CIDR,40.120.0.0/14,no-resolve
+  - IP-CIDR,40.124.0.0/16,no-resolve
+  - IP-CIDR,52.96.0.0/12,no-resolve
+  - IP-CIDR,52.112.0.0/14,no-resolve
+  - IP-CIDR,52.120.0.0/14,no-resolve
+  - IP-CIDR,52.128.0.0/17,no-resolve
+  - IP-CIDR,104.40.0.0/13,no-resolve
+  - IP-CIDR,104.208.0.0/13,no-resolve
+  - IP-CIDR,157.56.0.0/14,no-resolve
+  - IP-CIDR,157.56.64.0/18,no-resolve
+  - IP-CIDR,191.232.0.0/14,no-resolve
+  - IP-CIDR,207.46.0.0/16,no-resolve
+  - IP-CIDR,207.68.128.0/17,no-resolve
