--- a/local.yaml
+++ b/local.yaml
@@ -2,11 +2,11 @@ payload:
   # 本地局域网网段
   - DOMAIN-SUFFIX,local
   - DOMAIN-SUFFIX,homekit
-  - IP-CIDR,10.0.0.0/8
-  - IP-CIDR,172.0.0.0/12
-  - IP-CIDR,192.168.0.0/16
+  - IP-CIDR,10.0.0.0/8,no-resolve
+  - IP-CIDR,172.0.0.0/12,no-resolve
+  - IP-CIDR,192.168.0.0/16,no-resolve
 
   # 本地组播地址网段
-  - IP-CIDR,224.0.0.251/32
-  - IP-CIDR,224.0.0.0/4
-  - IP-CIDR,239.255.255.250/32
+  - IP-CIDR,224.0.0.251/32,no-resolve
+  - IP-CIDR,224.0.0.0/4,no-resolve
+  - IP-CIDR,239.255.255.250/32,no-resolve
