Fix formatting of DOMAIN-SUFFIX entry for akamai.com

--- a/cn-domain.yaml
+++ b/cn-domain.yaml
@@ -124,7 +124,7 @@ payload:
 
 # Foconn
   - DOMAIN-SUFFIX,foxconn.com
-  - DOMAIN-SUFFIX.akamai.com
+  - DOMAIN-SUFFIX,akamai.com
   - DOMAIN-SUFFIX,footprintdns.com
   - DOMAIN-SUFFIX,akamai-access.com
   - DOMAIN-SUFFIX,akamai-zt.com
