--- a/cn-domain.yaml
+++ b/cn-domain.yaml
@@ -47,6 +47,7 @@ payload:
   - DOMAIN-SUFFIX,aliyun.com
   - DOMAIN-SUFFIX,1688.com
   - DOMAIN-SUFFIX,alicdn.com
+  - DOMAIN-SUFFIX,aliyuncs.com
 
 # 京东 (JD.com)
   - DOMAIN-SUFFIX,jd.com
