Fix typo in DOMAIN-SUFFIX for huawei.com

--- a/cn-domain.yaml
+++ b/cn-domain.yaml
@@ -136,7 +136,7 @@ payload:
 
 # Huawei
   - DOMAIN-SUFFIX,huaweicloud.com
-  - DOMIAN-SUFFIX,huawei.com
+  - DOMAIN-SUFFIX,huawei.com
 
 # Zoom
   - DOMAIN-SUFFIX,zoom.us
