--- a/google.yaml
+++ b/google.yaml
@@ -10,6 +10,7 @@ payload:
   - DOMAIN-SUFFIX,blogspot.com
   - DOMAIN-SUFFIX,android.com
   - DOMAIN-SUFFIX,appspot.com
+  - DOMAIN-SUFFIX,google-analytics.com
 
   # YouTube 相关
   - DOMAIN-SUFFIX,youtube.com
