Fix typo in domain suffix for jianguoyun.com

--- a/cn-domain.yaml
+++ b/cn-domain.yaml
@@ -143,5 +143,8 @@ payload:
   - DOMAIN-SUFFIX,huaweicloud.com
   - DOMAIN-SUFFIX,huawei.com
 
+# 坚果云
+  - DOMAIN-SUFIX,jianguoyun.com
+
 # CN
   - DOMAIN-SUFFIX,cn
