Fix typo in DOMAIN-SUFFIX for jianguoyun.com

--- a/cn-domain.yaml
+++ b/cn-domain.yaml
@@ -144,7 +144,7 @@ payload:
   - DOMAIN-SUFFIX,huawei.com
 
 # 坚果云
-  - DOMAIN-SUFIX,jianguoyun.com
+  - DOMAIN-SUFFIX,jianguoyun.com
 
 # CN
   - DOMAIN-SUFFIX,cn
