--- a/proxy.yaml
+++ b/proxy.yaml
@@ -15,6 +15,7 @@ payload:
   - DOMAIN-SUFFIX,assets.github.com
   - DOMAIN-SUFFIX,camo.githubusercontent.com
   - DOMAIN-SUFFIX,githubcopilot.com
+  - DOMAIN-SUFFIX,githubassets.com
 
   # Netflix 相关
   - DOMAIN-SUFFIX,netflix.com
